# NetRaze32

./: .gitignore  BUILD.md  CHANGELOG.md  CHANGELOG_v1.0.1.md  CMakeLists.txt  LICENSE  OUI_SPY_INTEGRATION.md  PRODUCTION_DEPLOYMENT.md  README.md  RELEASE.md  VERSION.md  extract_firmware.bat  idf_component.yml  partitions.csv  sdkconfig.defaults  verify_build.bat
docs/: BUILD.md  CC1101_WIRING.md
main/: CMakeLists.txt  antenna_indicator.c  antenna_indicator.h  attack_profiles.c  attack_profiles.h  attack_scheduler.c  attack_scheduler.h  attack_timer.c  attack_timer.h  automation.c  automation.h  badusb_functions.c  badusb_functions.h  battery_monitor.c  battery_monitor.h  ble_attacks_enhanced.c  ble_attacks_enhanced.h  ble_hid_attack.c  ble_hid_attack.h  ble_packet_capture.c  ble_packet_capture.h  bluetooth_functions.c  bluetooth_functions.h  bmp_display.c  bmp_display.h  board_config.h  brightness_control.c  brightness_control.h  cc1101_driver.c  cc1101_driver.h  confirmation_dialog.c  confirmation_dialog.h  data_logger.c  data_logger.h  display.c  display.h  ducky_script.c  ducky_script.h  error_handler.c  error_handler.h  (+97 more)
